--- a/style.css
+++ b/style.css
@@ -1,15 +1,25 @@
+body{
+    background: linear-gradient(20deg,rgb(214, 207, 207) 10% ,rgb(236, 72, 236) 40%);
+}
 .main-box{
     width: 25%;
     box-shadow: 0 0 5px grey,inset 0 0 10px black;
-    height:95vh;
+    height:92vh;
     display: flex;
+    color: white;
+    font-weight: 400;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 .main-box>.box-one{
     width: 95%;
     margin-left: 2.3%;
     border:1px solid black;
-    height: 92vh;
-    margin-top:3px;
+    height: 90vh;
+    margin-top:6px;
+    background: linear-gradient(20deg,rgb(49, 46, 46) 10%,rgb(126, 116, 116) 40%);
 }
 .main-box>.box-one>.box-two{
     display: flex;
@@ -23,13 +33,14 @@
 }
 .main-box>.box-one>.box-two>span>small{
     font-size: 10px;
+    margin-top: 5px;
 }
 .main-box>.box-one>.box-two>span>button{
 width: 80px;
 padding:1px 3px;
 height: 28px;
 margin-left:2px;
-margin-top: 3px;
+margin-top: 8px;
 border-bottom-left-radius: 10px;
 border-bottom-right-radius: 10px;
 background-color:rgb(134, 132, 132);
@@ -54,7 +65,7 @@ margin-left: 2.3%;
     width: 80px;
     height: 33px;
     margin-left: 2px;
-    margin-top: 3px;   
+    margin-top: 8px;   
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: black;
@@ -66,12 +77,13 @@ margin-left: 2.3%;
     }
 .main-box>.box-one>.box-two>.box-three>span>small{
 font-size: 10px;
+margin-top: 5px;
 }
 .main-box>.box-one>#box-one-top{
     width: 95%;
     margin-left: 2.5%;
     margin-bottom: 2%;
-    height: 26vh;
+    height: 28vh;
     border: 1px solid black;
 }
 .main-box>.box-one>#box-one-top>#box-one-bottom{
@@ -83,8 +95,18 @@ font-size: 10px;
 .main-box>.box-one>#box-one-top>#box-one-bottom>button{
     width: 100px;
     margin-left: 2px;
-    margin-top:5px;
+    padding:5px;
+    margin-top: 12px;
     margin-bottom: 5px;
+    outline: none;
+    height: 30px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: rgb(204, 13, 179);
+    color: #fff;
+}
+.main-box>.box-one>#box-one-top>#box-one-bottom>button:hover{
+    transform: scale(0.95);
 
 }
 .main-box>.box-one>#box-one-top>#box-one-text{
@@ -111,6 +133,18 @@ font-size: 10px;
     margin-left: 2.5%;
     margin-top: 3px;
     border: none;
+    font-size: 30px;
     box-shadow: 0 0 8px black;
+
+}
+@media(max-width:830px) {
+    .main-box{
+        width: 100%;
+        height: 95vh;
+    }
+    .main-box>.box-one{
+        height: 92vh;
+
+    }
 
 }
